--- a/index.html
+++ b/index.html
@@ -55,12 +55,19 @@
     <h2>故事的起源</h2>
   </hgroup>
   <article data-timings="">
-    <ol class = "build incremental">
+      
+<div style='float:left;width:20%' >
+ <ol>
 <li>房價節節高升</li>
 <li>大熊被抓了</li>
 <li>房價真的太高了嗎?</li>
 </ol>
 
+</div>    
+<div style='float:right;width:80%'>
+ <p><img src = './resources/figures/R_ETL_NEWS.png' width="100%"></img></p>
+
+</div>
   </article>
   <!-- Presenter Notes -->
 </slide>
