--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 </div>    
 <div style='float:right;width:66%'>
- <p><img src = './resources/figures/R_ETL_NEWS.png' width="100%"></img></p>
+ <p><img src = './resources/figures/R_ETL_NEWS.png' height="600px"></img></p>
 
 </div>
   </article>
