--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 <slide class="" id="slide-2" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>資料在哪裡</h2>
+    <h2><code>資料在哪裡</code></h2>
   </hgroup>
   <article data-timings="">
     
 <div style='float:left;width:48%;'>
 <h3>你想知道什麼資料?</h3>
 
-<ol class = "build incremental">
+<ol>
 <li>GDP</li>
 <li>房貸餘額</li>
 <li>股價</li>
@@ -91,9 +91,9 @@
 
 </div>
   <div style='float:right;width:48%;'>
-<h3>可能的來源?</h3>
+<h3><code>可能的來源?</code></h3>
 
-<ol class = "build incremental">
+<ol>
 <li>政府公開資料</li>
 <li>新聞</li>
 <li>股市</li>
@@ -1235,7 +1235,7 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='資料在哪裡'>
+        data-slide=2 title='<code>資料在哪裡</code>'>
          2
       </a>
     </li>
