--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 <slide class="" id="slide-2" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2><code>資料在哪裡</code></h2>
+    <h2>資料在哪裡</h2>
   </hgroup>
   <article data-timings="">
     
 <div style='float:left;width:48%;'>
-<h3>你想知道什麼資料?</h3>
+<h3><code>你想知道什麼資料?</code></h3>
 
 <ol>
 <li>GDP</li>
@@ -1235,7 +1235,7 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='<code>資料在哪裡</code>'>
+        data-slide=2 title='資料在哪裡'>
          2
       </a>
     </li>
