--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
   
 </hgroup>
 <article class = 'flexbox vcenter'>
-<p><q>即便知道資料在哪，可是資料還是如同<code>一盤散沙</code></q></p>
+<p><q>即便知道資料在哪，可是資料還是如同<code>一盤散沙</code></q>
+<img src = './resources/figures/R_ETL_RAWDATA.png' height="400px"></img></p>
 
 </article>
 <!-- Presenter Notes -->
