--- a/index.html
+++ b/index.html
@@ -298,19 +298,20 @@
     <h2>今日課程的目標</h2>
   </hgroup>
   <article data-timings="">
-    <h3>用R整理<code>結構</code>化資料 STEP1,2</h3>
+    <h3>學會<strong>extraction</strong>, <strong>cleaning</strong>, <strong>transformation</strong></h3>
 
 <ul>
-<li>整理好 GDP, 房貸餘額</li>
+<li>用R整理<code>結構</code>化資料** STEP1 房貸餘額1** , <strong>STEP2 GDP</strong></li>
+<li>用R整理<code>非結構化</code>資料** STEP3新聞分析**</li>
 </ul>
 
-<h3>用R整理非結構化資料 STEP3</h3>
+<h3>學會 <strong>load</strong></h3>
 
 <ul>
-<li>新聞分析<br></li>
+<li>整併全部的資料 STEP4</li>
 </ul>
 
-<h3>整併全部的資料 STEP4</h3>
+<p>邁向 <strong>其他有意思的主題</strong></p>
 
 <h3>其他補充</h3>
 
