--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
     <h3>學會<strong>extraction</strong>, <strong>cleaning</strong>, <strong>transformation</strong></h3>
 
 <ul>
-<li>用R整理<code>結構</code>化資料** STEP1 房貸餘額1** , <strong>STEP2 GDP</strong></li>
-<li>用R整理<code>非結構化</code>資料** STEP3新聞分析**</li>
+<li>用R整理<code>結構</code>化資料 <strong>STEP1 房貸餘額1</strong> , <strong>STEP2 GDP</strong></li>
+<li>用R整理<code>非結構化</code>資料 <strong>STEP3新聞分析</strong></li>
 </ul>
 
 <h3>學會 <strong>load</strong></h3>
@@ -311,9 +311,7 @@
 <li>整併全部的資料 STEP4</li>
 </ul>
 
-<p>邁向 <strong>其他有意思的主題</strong></p>
-
-<h3>其他補充</h3>
+<h3>邁向 <strong>其他有意思的主題</strong></h3>
 
   </article>
   <!-- Presenter Notes -->
