--- a/index.html
+++ b/index.html
@@ -500,14 +500,14 @@ View(Cl_info)
   <article data-timings="">
     <h3><code>select</code> 函式，用來<strong>挑選</strong><code>欄位</code></h3>
   
-<div style='float:left;width:78%' >
+<div style='float:left;width:68%' >
  <pre><code>Cl_demo1 = select(Cl_info,data_dt,bank_nm,mortgage_bal)
 </code></pre>
 
 <ul>
 <li>輸出data frame</li>
-<li>第一個參數為輸入的data frame</li>
-<li>後續參數為選取的欄位名稱</li>
+<li><code>第一個參數</code>為輸入的data frame</li>
+<li><code>後續參數</code>為選取的欄位名稱</li>
 </ul>
 
 <p><br/></p>
@@ -518,8 +518,8 @@ View(Cl_info)
 </code></pre>
 
 </div>    
-<div style='float:right;width:18%'>
- <p><img src = './resources/figures/R_ETL_DPLYR_SELECT.png' height="350px"></img></p>
+<div style='float:right;width:28%'>
+ <p><img src = './resources/figures/R_ETL_DPLYR_SELECT.png'></img></p>
 
 </div>
   </article>
