--- a/index.html
+++ b/index.html
@@ -363,7 +363,9 @@ install.packages(&quot;gdata&quot;)
     <h2>開始收集資料(房貸餘額)</h2>
   </hgroup>
   <article data-timings="">
-    <iframe src = 'https://survey.banking.gov.tw/statis/stmain.jsp?sys=100&funid=r100' height='600px'></iframe>
+    <p>請連線到 <code>https://survey.banking.gov.tw/statis/stmain.jsp?sys=100&amp;funid=r100</code></p>
+
+<iframe src = 'https://survey.banking.gov.tw/statis/stmain.jsp?sys=100&funid=r100' height='600px'></iframe>
 
   </article>
   <!-- Presenter Notes -->
@@ -603,7 +605,7 @@ View(Cl_info)
     <h3><code>arrange</code> 用來重新排序</h3>
   
 <div style='float:left;width:68%' >
- <pre><code>Cl_demo4 = arrange(Cl_info,mortage,desc(data_dt))
+ <pre><code>Cl_demo4 = arrange(Cl_info,mortgage_bal,desc(data_dt))
 </code></pre>
 
 <ul>
@@ -654,7 +656,9 @@ View(Cl_info)
     <h2>開始收集資料(GDP)</h2>
   </hgroup>
   <article data-timings="">
-    <iframe src = 'http://ebas1.ebas.gov.tw/pxweb/Dialog/NI.asp' height='600px'></iframe>
+    <p>請連線到 <code>http://ebas1.ebas.gov.tw/pxweb/Dialog/NI.asp</code></p>
+
+<iframe src = 'http://ebas1.ebas.gov.tw/pxweb/Dialog/NI.asp' height='600px'></iframe>
 
   </article>
   <!-- Presenter Notes -->
@@ -790,6 +794,8 @@ View(Cl_info)
                         &quot;GDP_minus&quot;,&quot;GDP_minus_yoy&quot;)
 </code></pre>
 
+<p><img src = './resources/figures/R_ETL_GDP_1.png' ></img></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -812,6 +818,8 @@ GDP_part2= mutate(GDP_part,GDP = as.numeric(gsub(&quot;,&quot;, &quot;&quot;,GDP
 <li>而後利用了<code>as.numeric</code> 將原來的<code>文字</code>形態改成<code>數字</code></li>
 </ol>
 
+<p><img src = './resources/figures/R_ETL_GDP2.png' ></img></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -833,6 +841,8 @@ GDP_part4 = select(GDP_part3,year,season,GDP)
 <li>我們利用了 <code>substr</code>, 取出特定位置的資料</li>
 <li>再次利用<code>as.numeric</code>, 將文字轉成數字</li>
 </ol>
+
+<p><img src = './resources/figures/R_ETL_GDP3.png' ></img></p>
 
   </article>
   <!-- Presenter Notes -->
