--- a/index.html
+++ b/index.html
@@ -914,12 +914,13 @@ GDP_part4 = select(GDP_part3,year,season,GDP)
     <h2>dplyr 介紹 - group_by, summarise</h2>
   </hgroup>
   <article data-timings="">
-    <h3><code>group_by</code> 用來將資料<code>包裝成一組</code>，做後續的彙總</h3>
+      
+<div style='float:left;width:78%' >
+ <h3><code>group_by</code> 用來將資料<code>包裝成一組</code>，做後續的彙總</h3>
 
 <h3><code>summarise</code>則用來做後續的各類<code>彙總操作</code></h3>
-  
-<div style='float:left;width:68%' >
- <pre><code>Cl_info_part2 = mutate(Cl_info_part,time= as.POSIXct(data_dt))
+
+<pre><code>Cl_info_part2 = mutate(Cl_info_part,time= as.POSIXct(data_dt))
 Cl_info_part3 = group_by(Cl_info_part2,time)  #先匯總
 Cl_info_part4 = summarise(Cl_info_part3,
         mortage_total_bal = sum(mortgage_bal, na.rm = TRUE))
@@ -928,18 +929,19 @@ GDP_part5 = summarise(group_by(GDP_part4,year),GDP=sum(GDP))
 
 <ul>
 <li>輸出data frame</li>
-<li>第一個參數為輸入的 data frame</li>
-<li>第二個欄位之後都是用來group by/summarise 的欄位</li>
-<li>後續參數用來處理匯總運算</li>
+<li><code>第一個參數</code>為輸入的 data frame</li>
+<li><code>第二個欄位</code>之後都是用來group by/summarise 的欄位</li>
+<li><code>後續參數</code>用來處理匯總運算</li>
 </ul>
 
 <h3>給熟悉<code>SQL</code>的使用者</h3>
 
-<pre><code>select sum(mortgage_bal) as mortage_total_bal from Cl_info group by time ;
+<pre><code>select sum(mortgage_bal) as mortage_total_bal 
+                        from Cl_info group by time ;
 </code></pre>
 
 </div>    
-<div style='float:right;width:28%'>
+<div style='float:right;width:18%'>
  <p><img src = './resources/figures/R_ETL_DPLYR_SUMMARIZE.png'></img></p>
 
 </div>
