--- a/index.html
+++ b/index.html
@@ -928,7 +928,6 @@ GDP_part5 = summarise(group_by(GDP_part4,year),GDP=sum(GDP))
 </code></pre>
 
 <ul>
-<li>輸出data frame</li>
 <li><code>第一個參數</code>為輸入的 data frame</li>
 <li><code>第二個欄位</code>之後都是用來group by/summarise 的欄位</li>
 <li><code>後續參數</code>用來處理匯總運算</li>
@@ -1398,12 +1397,12 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
       
 <div style='float:left;width:18%' >
  <ul>
-<li>設定問題</li>
-<li>下載與讀入與整理</li>
-<li>整合資料</li>
-<li>畫圖</li>
-<li>解釋</li>
-<li>報告</li>
+<li>設定問題
+&gt; - 下載與讀入與整理
+&gt; - 整合資料
+&gt; - 畫圖
+&gt; - 解釋
+&gt; - 報告</li>
 </ul>
 
 </div>    
