--- a/index.html
+++ b/index.html
@@ -1396,13 +1396,13 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
   <article data-timings="">
       
 <div style='float:left;width:18%' >
- <ul>
-<li>設定問題
-&gt; - 下載與讀入與整理
-&gt; - 整合資料
-&gt; - 畫圖
-&gt; - 解釋
-&gt; - 報告</li>
+ <ul class = "build incremental">
+<li>設定問題</li>
+<li>下載與讀入與整理</li>
+<li>整合資料</li>
+<li>畫圖</li>
+<li>解釋</li>
+<li>報告</li>
 </ul>
 
 </div>    
