--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ View(Cl_info)
     <h3><code>select</code> 函式，用來<strong>挑選</strong><code>欄位</code></h3>
   
 <div style='float:left;width:68%' >
- <pre><code>Cl_demo1 = select(Cl_info,data_dt,bank_nm,mortgage_bal)
+ <pre><code>Cl_demo1 = select(資料表,欄位1,欄位2,欄位3)
 </code></pre>
 
 <ul>
@@ -523,6 +523,10 @@ View(Cl_info)
 </div>    
 <div style='float:right;width:28%'>
  <p><img src = './resources/figures/R_ETL_DPLYR_SELECT.png'></img></p>
+
+<h2>dplyr 介紹 - select</h2>
+
+<h3><code>select</code> 函式，用來<strong>挑選</strong><code>欄位</code></h3>
 
 </div>
   </article>
