--- a/index.html
+++ b/index.html
@@ -645,8 +645,11 @@ View(Cl_info)
 
 <ul>
 <li><code>第一個參數</code>為輸入的 data frame</li>
-<li><code>第二參數</code>為計算式，也可以用來當做<strong>轉換資料形態</strong>，<strong>變更欄位為名稱</strong>使用
-&gt; - 例如: bank_code = as.numeric(bank_code)</li>
+<li><code>第二參數</code>為計算式，也可以用來當做<strong>轉換資料形態</strong>，<strong>變更欄位為名稱</strong>使用</li>
+</ul>
+
+<ul class = "build incremental">
+<li>例如: bank_code = as.numeric(bank_code)</li>
 </ul>
 
 <p><br/></p>
