--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@ View(Cl_info)
 <slide class="" id="slide-34" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>練習-排序資料(2/2)</h2>
+    <h2>練習-<code>排序</code>資料(1/2)</h2>
   </hgroup>
   <article data-timings="">
     <h3>dplyr <code>arrange</code> 用來重新排序</h3>
@@ -739,7 +739,7 @@ View(Cl_info)
 <slide class="" id="slide-35" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>練習-排序資料(2/2)</h2>
+    <h2>練習-<code>排序</code>資料(2/2)</h2>
   </hgroup>
   <article data-timings="">
     <h3>dplyr <code>arrange</code> 用來重新排序</h3>
@@ -1847,13 +1847,13 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=34 title='練習-排序資料(2/2)'>
+        data-slide=34 title='練習-<code>排序</code>資料(1/2)'>
          34
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='練習-排序資料(2/2)'>
+        data-slide=35 title='練習-<code>排序</code>資料(2/2)'>
          35
       </a>
     </li>
