--- a/index.html
+++ b/index.html
@@ -565,33 +565,13 @@ View(Cl_info)
 
 <slide class="" id="slide-30" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
-  <hgroup>
-    <h2>練習-挑選資料(1/2)</h2>
-  </hgroup>
   <article data-timings="">
-    <h3>dplyr <code>filter</code> 函式，用來<strong>保留</strong>要留下的<code>資料列</code></h3>
-  
+      
 <div style='float:left;width:68%' >
- <pre><code>Cl_demo2 = filter(資料表,邏輯判斷)
-</code></pre>
-
-<ul>
-<li>輸出data frame</li>
-<li><code>第一個參數</code>為輸入的data frame</li>
-<li><code>第二個參數</code>為邏輯運算式，可用data frame裡的欄位，當結果為<code>True</code>時，該筆資料列保留</li>
-</ul>
-
-<p><br/></p>
-
-<h3>給熟悉<code>SQL</code>的使用者</h3>
-
-<pre><code>select * from Cl_info where mortgage&gt;1000000;
-</code></pre>
-
+ 
 </div>    
 <div style='float:right;width:28%'>
- <p><img src = './resources/figures/R_ETL_DPLYR_FILTER.png'></img></p>
-
+ 
 </div>
   </article>
   <!-- Presenter Notes -->
@@ -600,7 +580,7 @@ View(Cl_info)
 <slide class="" id="slide-31" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>練習-挑選資料(2/2)</h2>
+    <h2>練習-挑選資料</h2>
   </hgroup>
   <article data-timings="">
     <h3>dplyr <code>filter</code> 函式，用來<strong>保留</strong>要留下的<code>資料列</code></h3>
@@ -1823,13 +1803,13 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title='練習-挑選資料(1/2)'>
+        data-slide=30 title=''>
          30
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=31 title='練習-挑選資料(2/2)'>
+        data-slide=31 title='練習-挑選資料'>
          31
       </a>
     </li>
