--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,9 @@ GDP_part4 = select(GDP_part3,year,season,GDP)
 <li>透過<code>年份</code>將<strong>房貸餘額</strong>與<strong>GDP</strong>的表<code>結合</code>起來</li>
 </ol>
 
+<p>// 每個月的資料GDP  房貸
+// 連結 兩張表的圖</p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
@@ -1016,7 +1019,7 @@ GDP_part4 = select(GDP_part3,year,season,GDP)
 <slide class="" id="slide-53" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>dplyr 介紹 - group_by, summarise</h2>
+    <h2>練習-資料<code>彙總</code></h2>
   </hgroup>
   <article data-timings="">
       
@@ -1927,7 +1930,7 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=53 title='dplyr 介紹 - group_by, summarise'>
+        data-slide=53 title='練習-資料<code>彙總</code>'>
          53
       </a>
     </li>
