--- a/index.html
+++ b/index.html
@@ -899,12 +899,10 @@ View(Cl_info)
 <slide class="" id="slide-46" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>一步一步來(1/3)</h2>
+    <h2>去除前後不相干的資料列</h2>
   </hgroup>
   <article data-timings="">
-    <h3>去除前後不相干的資料列</h3>
-
-<pre><code>GDP_part = GDP[5:137,]
+    <pre><code>GDP_part = GDP[5:137,]
 </code></pre>
 
 <h3>別忘了改上欄位名稱</h3>
@@ -922,12 +920,10 @@ View(Cl_info)
 <slide class="" id="slide-47" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>一步一步來(2/3)</h2>
+    <h2>轉移文字格式</h2>
   </hgroup>
   <article data-timings="">
-    <h3>轉移文字格式</h3>
-
-<pre><code>#去除中間不合理的,在數字欄位上與補上百萬
+    <pre><code>#去除中間不合理的,在數字欄位上與補上百萬
 GDP_part2= mutate(GDP_part,GDP = as.numeric(gsub(&quot;,&quot;, &quot;&quot;,GDP))*1000000)
 
 </code></pre>
@@ -946,12 +942,10 @@ GDP_part2= mutate(GDP_part,GDP = as.numeric(gsub(&quot;,&quot;, &quot;&quot;,GDP
 <slide class="" id="slide-48" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
   <hgroup>
-    <h2>一步一步來(3/3)</h2>
+    <h2>抽離年份與季</h2>
   </hgroup>
   <article data-timings="">
-    <h3>抽離年份與季</h3>
-
-<pre><code>GDP_part3 = mutate(GDP_part2,year=as.numeric(substr(time,0,4)),
+    <pre><code>GDP_part3 = mutate(GDP_part2,year=as.numeric(substr(time,0,4)),
                             season=as.numeric(substr(time,6,6)))
 GDP_part4 = select(GDP_part3,year,season,GDP)
 </code></pre>
@@ -2023,19 +2017,19 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=46 title='一步一步來(1/3)'>
+        data-slide=46 title='去除前後不相干的資料列'>
          46
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=47 title='一步一步來(2/3)'>
+        data-slide=47 title='轉移文字格式'>
          47
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=48 title='一步一步來(3/3)'>
+        data-slide=48 title='抽離年份與季'>
          48
       </a>
     </li>
