--- a/index.html
+++ b/index.html
@@ -1159,10 +1159,11 @@ index(news.month) &lt;- as.POSIXct(format(index(news.month), &quot;%Y-%m-01&quot
 
 <slide class="quote" id="slide-62" style="background:; background-repeat:no-repeat; background-position:center; ">
   <img src="assets/img/Taiwan-R-logo.png" class="logo fit100" />
+  <hgroup>
+    <h2>股市資料</h2>
+  </hgroup>
   <article data-timings="">
-    <p>股市資料</p>
-
-<p>營建股清單
+    <p>營建股清單
 <a href="http://www.wantgoo.com/stock/classcont.aspx?id=32">http://www.wantgoo.com/stock/classcont.aspx?id=32</a></p>
 
   </article>
@@ -1311,8 +1312,7 @@ index(stock.final) &lt;- as.POSIXct(format(index(stock.final), &quot;%Y-%m-01&qu
 <li>透過<code>年份</code>將<strong>房貸餘額</strong>與<strong>GDP</strong>的表<code>結合</code>起來</li>
 </ol>
 
-<p>// 每個月的資料GDP  房貸
-// 連結 兩張表的圖</p>
+<p><img src="./resources/figures/R_ETL_PART4.png"></img></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -2408,7 +2408,7 @@ ggplot(see1, aes(time, ratio))+geom_smooth(method=&quot;loess&quot;) +
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=62 title=''>
+        data-slide=62 title='股市資料'>
          62
       </a>
     </li>
